--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+/Algorithms/nbproject/private/
+/Algorithms/build/
+/Algorithms/dist/
