--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ Temporary Items
 /Algorithms/nbproject/private/
 /Algorithms/build/
 /Algorithms/dist/
+/MatrixCalculation/nbproject/private/
+/MatrixCalculation/build/
